[package]
name = "tropika"
version = "0.2.0"
publish = false
authors = ["kiwiyou <kiwiyou@protonmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.4"
tokio = { version = "0.2", default-features = false, features = ["macros"] }
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git" }
log = "0.4"
log4rs = "0.9"
tempfile = "3.1"
serde = { version = "1.0", features = ["derive"] }
surf = "1.0"
lazy_static = "1.4"